# rag_document

./: .gitignore  docker-compose.yml  requirements.txt  設計.md
unified-id-indexing-system/: .env.example  README.md  pyproject.toml  requirements.txt
unified-id-indexing-system/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
unified-id-indexing-system/docs/: api_reference.md  architecture.md  deployment_guide.md
unified-id-indexing-system/scripts/: check_consistency.py  migrate_data.py  setup_databases.py
unified-id-indexing-system/src/api/: middleware.py  models.py  routes.py
unified-id-indexing-system/src/config/: __init__.py  settings.py
unified-id-indexing-system/src/core/: correlation_id.py  global_sequence.py  unified_id.py
unified-id-indexing-system/src/db/: __init__.py  database_manager.py  milvus_client.py  mongo_client.py  neo4j_client.py  redis_client.py
unified-id-indexing-system/src/document_processing/: __init__.py  chunk_service.py  ingest_service.py  preprocessor_service.py  processor.py
unified-id-indexing-system/src/embedding/: embedding_service.py  ollama_connector.py
unified-id-indexing-system/src/indexing/: distributed_index_manager.py  index_registry.py  milvus_indexer.py  mongo_indexer.py  neo4j_indexer.py  redis_indexer.py
unified-id-indexing-system/src/monitoring/: audit_logger.py  health_checker.py  metrics_collector.py
unified-id-indexing-system/src/search/: __init__.py  graph_search.py  (+3 more)
unified-id-indexing-system/tests/: test_consistency.py  test_indexing.py  test_search.py  test_unified_id.py
(+297 files in other folders)
